# lwm2m-server-rs

./: .codecov.yml  .pre-commit-config.yaml  AGENT-DOC.md  AGENT-test.md  AGENTS.md  Cargo.toml  LICENSE  README.md  opencode.json  run_tests.sh  todo.txt
.ai/mcp/: mcp.json
.github/workflows/: build.yaml  coverage.yaml  dependencies.yaml  sanitizers.yaml
component_tests/: registration.py
examples/: simple_server.rs
src/: block.rs  clients.rs  lib.rs  main.rs  server.rs  transport.rs
tests/: test_udp_server.rs
