[package]
name = "lwm2m-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
coap-lite = "^0.13.1"
rand = "0.9.1"
tokio = { version = "^1.44", features = ["macros", "net", "rt", "sync"] }
tower = { version = "0.4.13", features = ["util"] }

[dev-dependencies]
cargo-llvm-cov = "0.6.16"

